introduced product layer
