# docs/swagger.yaml
@@ -16,9 +16,6 @@ definitions:
               type: string
             quantity:
               type: integer
-            unit_price:
-              description: cents
-              type: number
           type: object
         type: array
     type: object
@@ -35,8 +32,25 @@ definitions:
       total_vat:
         type: number
     type: object
+  handlers.ProductResponse:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      price_with_vat:
+        type: number
+      vat:
+        type: number
+    type: object
   handlers.orderItemReply:
     properties:
+      name:
+        type: string
       product_id:
         type: string
       quantity:
@@ -71,7 +85,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Elenca tutti gli ordini
       tags:
-      - orders
+      - Orders
     post:
       consumes:
       - application/json
@@ -96,7 +110,7 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Crea un nuovo ordine
       tags:
-      - orders
+      - Orders
   /api/v1/orders/{id}:
     get:
       description: Recupera i dettagli di un ordine utilizzando il suo ID
@@ -127,7 +141,33 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Ottieni un ordine per ID
       tags:
-      - orders
+      - Orders
+  /api/v1/products:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all products
+      parameters:
+      - description: Country Code for VAT calculation
+        in: query
+        name: country_code
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.ProductResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Get All Products
+      tags:
+      - Products
   /health:
     get:
       produces:
