# internal/domain/product/model.go
@@ -1,0 +1,10 @@
+package product
+
+type Detail struct {
+	ID           string
+	Name         string
+	Description  string
+	VAT          float64
+	PriceWithVAT float64
+	Price        float64
+}
